--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,72 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: rgb(255, 255, 255);
+    --shaded-background: rgb(235, 235, 235);
+    --double-shaded-background: rgb(220, 220, 220);
+    --foreground: rgb(40, 40, 40);
+    --shaded-foreground: rgb(60, 60, 60);
+    --double-shaded-foreground: rgb(80, 80, 80);
+    --opposite: rgb(0, 0, 0);
+    --font-color: #333;
+    --shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px,
+        rgba(0, 0, 0, 0.07) 0px 2px 4px,
+        rgba(0, 0, 0, 0.07) 0px 4px 8px,
+        rgba(0, 0, 0, 0.07) 0px 8px 16px,
+        rgba(0, 0, 0, 0.07) 0px 16px 32px,
+        rgba(0, 0, 0, 0.07) 0px 32px 64px;
+    --highlight: rgb(250, 250, 245);
+    --button: magenta;
+    --border: #ddd;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+    :root {
+        --background: rgb(0, 0, 0);
+        --shaded-background: rgb(20, 20, 20);
+        --double-shaded-background: rgb(35, 35, 35);
+        --foreground: rgb(215, 215, 215);
+        --shaded-foreground: rgb(195, 195, 195);
+        --double-shaded-foreground: rgb(175, 175, 175);
+        --opposite: rgb(255, 255, 255);
+        --font-color: #ddd;
+        --shadow: rgba(0, 0, 0) 0px 0px 0px;
+        --highlight: rgb(30, 30, 30);
+        --button: magenta;
+        --border: #ddd;
+    }
 }
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    color: var(--font-color);
+    background: var(--background);
+    font-family: var(--font-geist-sans), Arial, Helvetica, sans-serif;
+    font-size: x-large;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: blue;
+    text-decoration: none;
+}
+
+a:hover {
+    color: magenta;
 }
 
 @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+    html {
+        color-scheme: dark;
+    }
 }
