--- a/app/page.module.css
+++ b/app/page.module.css
@@ -6,12 +6,10 @@
   --button-primary-hover: #383838;
   --button-secondary-hover: #f2f2f2;
 
-  display: grid;
-  grid-template-rows: 20px 1fr 20px;
   align-items: center;
   justify-items: center;
   min-height: 100svh;
-  padding: 80px;
+  padding: 10px;
   gap: 64px;
   font-family: var(--font-geist-sans);
 }
@@ -30,18 +28,13 @@
 .main {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 32px;
-  grid-row-start: 2;
 }
 
-.main ol {
-  font-family: var(--font-geist-mono);
-  padding-left: 0;
-  margin: 0;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: -0.01em;
-  list-style-position: inside;
+.main ul {
+  list-style-type: none;
+  max-width: 600px;
 }
 
 .main li:not(:last-of-type) {
@@ -90,7 +83,6 @@ a.secondary {
 }
 
 .footer {
-  grid-row-start: 3;
   display: flex;
   gap: 24px;
 }
@@ -133,7 +125,7 @@ a.secondary {
     align-items: center;
   }
 
-  .main ol {
+  .main ul {
     text-align: center;
   }
 
